--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Netflix</title>
     <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
 
 </head>
 
